human_written_tests/WebAssembly/processed_control_flow_validation/test_loop_28.wast
(assert_invalid
  (module
    (func $type-value-empty-in-block
      (i32.const 0)
      (block (loop (result i32)) (drop))
    )
  )
  "type mismatch"
)